--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+streamlit==1.24.1
+streamlit-chat==0.1.1
+streamlit-image-select==0.6.0
 webuiapi==0.9.4
 Pillow==9.3.0
-opencv-python==4.8.0.74
 numpy==1.25.1
-streamlit-chat==0.1.1
 uvicorn==0.23.2
+# insightface==0.7.3
+# onnx==1.14.0
+# onnxruntime==1.15.0
+# opencv-python==4.7.0.72
+# ifnude
+# cython
 # octoai==0.1.1
